<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Gui.Login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_blue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/title2" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_32dp"
            android:background="@drawable/edittext_bg">

            <ImageView
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/email_icon" />


            <EditText
                android:id="@+id/login_email_ET"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:text="hassan@hotmail.com"
                android:textAlignment="viewStart" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_bg">

            <EditText
                android:id="@+id/login_password_ET"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:text="hassan123" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/pw_icon" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/create_acc_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/don_t_have_account_tx"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_txt"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginHorizontal="@dimen/dimen_12dp"
                android:src="@drawable/google_icon" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fb_icon" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/login_progress"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:SpinKit_Color="@color/colorAccent" />

    </FrameLayout>

</FrameLayout>